--- a/CarWashApps/Views/Shared/_Layout.cshtml
+++ b/CarWashApps/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ListServices" asp-action="Index">Услуги</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="CostServices" asp-action="Index">Стоимость услуг</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Пользовательское соглашение</a>
                         </li>
