--- a/CarWashApps/Views/CostServices/Create.cshtml
+++ b/CarWashApps/Views/CostServices/Create.cshtml
@@ -24,21 +24,21 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="IdService" class="control-label"></label>
                 <select asp-for="IdService" class ="form-control" asp-items="ViewBag.IdService"></select>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="Cost" class="control-label"></label>
                 <input asp-for="Cost" class="form-control" type="number" step="any"/>
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="DateCost" class="control-label"></label>
                 <input asp-for="DateCost" class="form-control" />
                 <span asp-validation-for="DateCost" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
