--- a/CarWashApps/Views/CostServices/Edit.cshtml
+++ b/CarWashApps/Views/CostServices/Edit.cshtml
@@ -26,22 +26,22 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="IdService" class="control-label"></label>
                 <select asp-for="IdService" class="form-control" asp-items="ViewBag.IdService"></select>
                 <span asp-validation-for="IdService" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="Cost" class="control-label"></label>
                 <input asp-for="Cost" class="form-control" type="number" step="any" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="DateCost" class="control-label"></label>
                 <input asp-for="DateCost" class="form-control" />
                 <span asp-validation-for="DateCost" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
