--- a/CarWashApps/Views/Home/Index.cshtml
+++ b/CarWashApps/Views/Home/Index.cshtml
@@ -5,4 +5,14 @@
 <div class="text-center">
     <h1 class="display-4">Привет!</h1>
     <p>Автомойка by Егаш</p>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">
+                <i class="fas fa-sign-in-alt"></i>  Вход
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Регистрация</a>
+        </li>
+    </ul>
 </div>
