--- a/CarWashApps/Views/ListServices/Create.cshtml
+++ b/CarWashApps/Views/ListServices/Create.cshtml
@@ -23,17 +23,17 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="ServiceName" class="control-label"></label>
                 <input asp-for="ServiceName" class="form-control" />
                 <span asp-validation-for="ServiceName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="ServiceDescription" class="control-label"></label>
                 <input asp-for="ServiceDescription" class="form-control" />
                 <span asp-validation-for="ServiceDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
