--- a/CarWashApps/Views/ListServices/Edit.cshtml
+++ b/CarWashApps/Views/ListServices/Edit.cshtml
@@ -24,17 +24,17 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="ServiceName" class="control-label"></label>
                 <input asp-for="ServiceName" class="form-control" />
                 <span asp-validation-for="ServiceName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label asp-for="ServiceDescription" class="control-label"></label>
                 <input asp-for="ServiceDescription" class="form-control" />
                 <span asp-validation-for="ServiceDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
