--- a/CarWashApps/Views/Home/Index.cshtml
+++ b/CarWashApps/Views/Home/Index.cshtml
@@ -2,9 +2,16 @@
     ViewData["Title"] = "Автомойка";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Привет!</h1>
-    <p>Автомойка by Егаш</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>@User.Identity.Name</p>
+
+    <form method="post" asp-controller="Account" asp-action="Logout">
+        <input type="submit" value="Выход" />
+    </form>
+}
+else
+{
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">
@@ -15,4 +22,4 @@
             <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Регистрация</a>
         </li>
     </ul>
-</div>
+}
