Добавление работы с таблицей "Заказы"

--- a/CarWashApps/Views/Shared/_Layout.cshtml
+++ b/CarWashApps/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-controller="CostServices" asp-action="Index">Стоимость услуг</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Бронирование</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Пользовательское соглашение</a>
                         </li>
