Добавление работы с таблицами: Отзывы и пользователи

--- a/CarWashApps/Views/Orders/Create.cshtml
+++ b/CarWashApps/Views/Orders/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CarWashApps.ViewModels.Orders.CreateOrderViewModel
 @{
-    ViewData["Title"] = "Создание - Формы  обучения";
+    ViewData["Title"] = "Создание - Заказа";
 }
 
 <nav aria-label="breadcrumb">
