--- a/CarWashApps/Views/Orders/Details.cshtml
+++ b/CarWashApps/Views/Orders/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarWashApps.Models.Data.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали";
 }
 
 <h3>
@@ -12,7 +12,7 @@
 </h3>
 
 <div>
-    <h4>Order</h4>
+    <h4>Заказ</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
