--- a/CarWashApps/Views/Shared/_Layout.cshtml
+++ b/CarWashApps/Views/Shared/_Layout.cshtml
@@ -33,6 +33,12 @@
                         <li>
                             <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Бронирование</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Reviews" asp-action="Index">Отзывы</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Users" asp-action="Index">Пользователи</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Пользовательское соглашение</a>
                         </li>
